--- a/manifest.json
+++ b/manifest.json
@@ -55,8 +55,8 @@
                                      }
                                  ],
     "icons":  {
-                  "16":  "assets/icon16.png",
-                  "128":  "assets/icon128.png",
-                  "48":  "assets/icon48.png"
+                  "16":  "assets/logo-light.png",
+                  "48":  "assets/logo-light.png",
+                  "128":  "assets/logo-light.png"
               }
 }
